Extense refactor - all style objects are made immutable